--- a/style/task.css
+++ b/style/task.css
@@ -100,6 +100,12 @@ div.drag-node {
   opacity: 0.5;
 }
 
+div.menu-open {
+  summary {
+    opacity: 0.5;
+  }
+}
+
 /* states */
 
 div {
