--- a/style/theme.css
+++ b/style/theme.css
@@ -18,9 +18,13 @@ html.theme-forest {
     color: var(--forest-fg-accent) !important;
   }
 
+  task-view > menu {
+    background-color: var(--forest-bg);
+    box-shadow: 0.6rem 0.2rem 0.4rem var(--color-black-50);
+  }
+
   select,
   select option {
-    background-color: var(--forest-bg);
     color: var(--forest-bg-accent);
   }
 
@@ -40,16 +44,9 @@ html.theme-forest {
     box-shadow: inset 2px 2px 5px var(--color-black);
   }
 
-  task-view > menu {
-    select,
-    select option {
-      color: var(--forest-bg-accent);
-    }
-
-    select:hover,
-    select option:hover {
-      color: var(--forest-fg-accent) !important;
-      background-color: var(--forest-bg-shade) !important;
+  task-view:not(.dragging) {
+    task-node::part(summary):hover {
+      color: var(--forest-fg-accent);
     }
   }
 
@@ -85,6 +82,11 @@ html.theme-gruvbox {
   task-node::part(icon-button):hover {
     background-color: var(--gruvbox-bg-shade) !important;
     color: var(--gruvbox-fg-accent) !important;
+  }
+
+  task-view > menu {
+    background-color: var(--gruvbox-bg);
+    box-shadow: 0.6rem 0.2rem 0.4rem var(--color-black-50);
   }
 
   select,
